Added calendar to all front end pages. Also adding if statement to only load if page has a cal

--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -26,7 +26,7 @@
     </div>
 
 
-    <div class="row">
+    <div class="row" *ngIf="page.hasCalendar">
         <div class="container-fluid">
             <ddw-admin-calendar-item
                     *ngFor="let calEl of calendar$ | async"
