--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -25,6 +25,15 @@
         </div>
     </div>
 
+    <div class="row" *ngIf="page.hasCalendar">
+        <div class="container-fluid">
+            <ddw-admin-calendar-item
+                    *ngFor="let calEl of calendar$ | async"
+                    [calendar]="calEl">
+            </ddw-admin-calendar-item>
+        </div>
+    </div>
+
     <div class="row">
         <div class="container">
             <div class="col-md-4 offset-md-4 text-center">
