fixed bugs with calendar edit calendars should be fully working

--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
@@ -61,7 +61,7 @@
                             <input type="text"
                                    class="form-control"
                                    required
-                                   [(ngModel)]="calendar.title"
+                                   [(ngModel)]="title"
                                    formControlName="title"/>
                         </div>
 
@@ -224,7 +224,7 @@
                                            bsDatepicker
                                            placement="top"
                                            formControlName="date4"
-                                           [bsConfig]="bsConfig" *ngIf="calendar.date4">
+                                           [bsConfig]="bsConfig">
                                 </div>
                             </div>
 
