--- a/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.html
@@ -1,11 +1,81 @@
 <!-- * ADMIN-CALENDAR-ITEM * -->
-
 <div class="row">
-    <div class="col-md-2">
-        {{ calendar.title }}
+    <div class="container-fluid" style="max-width:1200px;">
+        <div class="col-md-12" style="padding-left:0;">
+            <h2 style="margin-left:0;">{{ calendar.title }}</h2>
+        </div>
     </div>
-    <div class="col-md-10">
-        <h5>{{ calendar.date1 }}</h5>
-        <p>{{ calendar.body1 }}</p>
+</div>
+
+<!-- * Tabs * -->
+<div class="row">
+    <div class="container-fluid" style="max-width:1200px;">
+        <ul class="nav nav-tabs nav-fill" id="calTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active"
+                   id="date1-tab"
+                   data-toggle="tab"
+                   href="#date1"
+                   role="tab"
+                   aria-controls="date1"
+                   aria-selected="true">{{ calendar.date1.toDate() | date:'LLLL dd' }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"
+                   id="date2-tab"
+                   data-toggle="tab"
+                   href="#date2"
+                   role="tab"
+                   aria-controls="date2"
+                   aria-selected="false">{{ calendar.date2.toDate() | date:'LLLL dd' }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"
+                   id="date3-tab"
+                   data-toggle="tab"
+                   href="#date3"
+                   role="tab"
+                   aria-controls="date3"
+                   aria-selected="false">{{ calendar.date3.toDate() | date:'LLLL dd' }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"
+                   id="date4-tab"
+                   data-toggle="tab"
+                   href="#date4"
+                   role="tab"
+                   aria-controls="date4"
+                   aria-selected="false">{{ calendar.date4.toDate() | date:'LLLL dd' }}</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active"
+                 id="date1"
+                 role="tabpanel"
+                 aria-labelledby="date1-tab">
+                <h4 class="pt-5 mt-3 pb-5 mb-3">
+                    <b>{{ calendar.date2.toDate() | date:'EEEE' }},</b> {{ calendar.date2.toDate() | date }}
+                </h4>
+                <div [innerHTML]="calendar.body1 | safeHtml" class="cal-content"></div>
+            </div>
+            <div class="tab-pane fade"
+                 id="date2"
+                 role="tabpanel"
+                 aria-labelledby="date2-tab">
+                <div [innerHTML]="calendar.body2 | safeHtml" class="cal-content"></div>
+            </div>
+            <div class="tab-pane fade"
+                 id="date3"
+                 role="tabpanel"
+                 aria-labelledby="date3-tab">
+                <div [innerHTML]="calendar.body3 | safeHtml" class="cal-content"></div>
+            </div>
+            <div class="tab-pane fade"
+                 id="date4"
+                 role="tabpanel"
+                 aria-labelledby="date4-tab">
+                <div [innerHTML]="calendar.body4 | safeHtml" class="cal-content"></div>
+            </div>
+        </div>
     </div>
 </div>
