Updated sidenav to have correct calendar text, and calendars should be fully working

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -109,12 +109,12 @@
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/calendar']" class="sidenav-link">
-                    <div><i class="fal fa-calendar-check"></i>&nbsp;All Events</div>
+                    <div><i class="fal fa-calendar-check"></i>&nbsp;All Calendars</div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/calendar/new']" class="sidenav-link">
-                    <div><i class="fal fa-calendar-plus"></i>&nbsp;New Event</div>
+                    <div><i class="fal fa-calendar-plus"></i>&nbsp;New Calendars</div>
                 </a>
             </li>
         </ul>
