--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -114,7 +114,7 @@
             </li>
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/calendar/new']" class="sidenav-link">
-                    <div><i class="fal fa-calendar-plus"></i>&nbsp;New Calendars</div>
+                    <div><i class="fal fa-calendar-plus"></i>&nbsp;New Calendar</div>
                 </a>
             </li>
         </ul>
