Fixed page edit bug and added some addition calendar page styling

--- a/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.css
+++ b/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.css
@@ -39,3 +39,12 @@ a:link, a:link:active {
 h4, p, li {
     font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
 }
+
+#calTab {
+    border: 1px solid #EBEBEB;
+}
+
+.tab-content {
+    border: 1px solid #EBEBEB;
+    border-top: #fff;
+}
