--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
@@ -57,12 +57,26 @@
                           *ngIf="calendar; else loading">
 
                         <div class="form-group">
-                            <label>Title</label>
+                            <label>Title <br>
+                                <small>Needs to be unique</small>
+                            </label>
                             <input type="text"
                                    class="form-control"
                                    required
                                    [(ngModel)]="title"
                                    formControlName="title"/>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label>Display Name <br>
+                                <small>What's shown on the page; Does not need to be unique</small>
+                            </label>
+                            <input type="text"
+                                   class="form-control"
+                                   required
+                                   [(ngModel)]="displayName"
+                                   formControlName="displayName"/>
                         </div>
 
                         <!-- * Date 1 * -->
