--- a/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
@@ -54,13 +54,25 @@
                           *ngIf="calColumnValues; else loading">
 
                         <div class="form-group">
-                            <label>Title</label>
+                            <label>Title <br>
+                                <small>Needs to be unique</small>
+                            </label>
                             <input type="text"
                                    class="form-control"
                                    required
                                    formControlName="title"/>
                         </div>
 
+
+                        <div class="form-group">
+                            <label>Display Name <br>
+                                <small>What's shown on the page; Does not need to be unique</small>
+                            </label>
+                            <input type="text"
+                                   class="form-control"
+                                   required
+                                   formControlName="displayName"/>
+                        </div>
                         <!-- * Date 1 * -->
                         <mat-expansion-panel>
                             <mat-expansion-panel-header>
