--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -97,6 +97,30 @@
         </ul>
     </li>
 
+
+    <!-- * Press Releases * -->
+    <li class="sidenav-item"
+        [ngClass]="{'active open':showPressReleaseToggle, '':!showPressReleaseToggle}"
+        *ngIf="isLoggedIn">
+        <a class="sidenav-link sidenav-toggle" (click)="onShowPressReleaseToggle()">
+            <i class="sidenav-icon ion ion-md-speedometer"></i>
+            <div><i class="fal fa-bullhorn"></i>&nbsp;Press Releases</div>
+        </a>
+
+        <ul class="sidenav-menu">
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/press-releases']" class="sidenav-link">
+                    <div><i class="fal fa-broadcast-tower"></i>&nbsp;All PR</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/press-releases/new']" class="sidenav-link">
+                    <div><i class="fal fa-comment-alt-plus"></i>&nbsp;New PR</div>
+                </a>
+            </li>
+        </ul>
+    </li>
+
     <!-- * Calendar * -->
     <li class="sidenav-item"
         [ngClass]="{'active open':showCalendarToggle, '':!showCalendarToggle}"
