CRUD operations for Press Releases now working. Need to create frontend viewing

--- a/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
@@ -1,3 +1,146 @@
-<p>
-  admin-press-release-edit works!
-</p>
+<!-- * ADMIN-PRESS-RELEASES-NEW * -->
+<div class="row mb-4">
+    <div class="container">
+        <div class="col-md-12">
+            <a class="btn btn-default"
+               [routerLink]="['/admin/press-releases']">
+                <i class="fal fa-arrow-circle-left"></i>&nbsp;All Press Releases
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="container new-press-release">
+    <div class="col-md-12">
+        <div class="card mb-5">
+            <div class="card-body">
+                <div class="card-title">
+                    <h2>New PressRelease</h2>
+                </div>
+                <ng-template #loading>
+                    <div class="text-center text-dark p-5">
+                        <i class="far fa-spinner fa-pulse"></i>
+                        <br>
+                        loading...
+                    </div>
+                </ng-template>
+                <form [formGroup]="editPressReleaseForm"
+                      (ngSubmit)="onAddEditPressRelease(editPressReleaseForm.value)"
+                      *ngIf="pressRelease; else loading">
+
+                    <div class="form-group">
+                        <label>Title <br>
+                            <small>Cannot be Changed. If needed, you have to create a new page</small>
+                        </label>
+                        <input type="text"
+                               required
+                               disabled
+                               class="form-control"
+                               [class.invalid]="!f.title.valid && f.title.touched"
+                               [(ngModel)]="pressRelease.title"
+                               formControlName="title">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Summary</label>
+                        <textarea type="text"
+                                  rows="5"
+                                  class="form-control"
+                                  [class.invalid]="!f.summary.valid && f.summary.touched"
+                                  [(ngModel)]="pressRelease.summary"
+                                  formControlName="summary">
+                        </textarea>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label>Author</label>
+                        <input type="text"
+                               class="form-control"
+                               [class.invalid]="!f.author.valid && f.author.touched"
+                               [(ngModel)]="author"
+                               formControlName="author">
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="publishOn">Publish On <br>
+                            <small>Current date set to: {{ pressRelease.publishOn | date }}</small>
+                        </label>
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">
+                                    <i class="fa fa-calendar-alt"></i>
+                                </div>
+                            </div>
+                            <input type="text"
+                                   class="form-control"
+                                   id="publishOn"
+                                   bsDatepicker
+                                   [bsConfig]="bsConfig"
+                                   placement="top"
+                                   [class.invalid]="!f.publishOn.valid && f.publishOn.touched"
+                                   [(ngModel)]="pressRelease.publishOn"
+                                   formControlName="publishOn">
+                        </div>
+                        <p class="help-block alert alert-warning text-center mt-1"
+                           *ngIf="!f.publishOn.valid && f.publishOn.touched">
+                            <b>Publish Date</b> is required!
+                        </p>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label>Body</label>
+                        <ckeditor [formControl]="editPressReleaseForm.controls['body']"
+                                  [(ngModel)]="pressRelease.body"
+                                  [config]="CkeditorConfig"
+                                  [readonly]="false"
+                                  debounce="500">
+                        </ckeditor>
+                        <p class="help-block alert alert-warning text-center mt-1"
+                           *ngIf="!f.body.valid && f.body.touched">
+                            <b>Body</b> is required!
+                        </p>
+                    </div>
+
+
+                    <div class="form-group">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox"
+                                   class="custom-control-input"
+                                   id="published"
+                                   [checked]="pressRelease.published"
+                                   formControlName="published">
+                            <label class="custom-control-label"
+                                   for="published">Publish?</label>
+                        </div>
+                    </div>
+
+                    <div class="btn-group float-right" role="group" aria-label="Basic example">
+                        <a class="btn btn-warning btn-sm"
+                           [routerLink]="['/admin/press-releases']">
+                            <i class="fa fa-undo"></i>&nbsp;Cancel
+                        </a>
+                    </div>
+
+                    <button type="submit"
+                            class="btn btn-primary btn-sm mb-5">
+                        <i class="fa fa-bullhorn"></i>&nbsp;Update
+                    </button>
+
+                    <!--* Debugging * -->
+                    <!--<code>-->
+                        <!--<pre>Form value: {{ editPressReleaseForm.value | json }}</pre>-->
+                    <!--</code>-->
+                    <!--<code>-->
+                        <!--<pre>Form value: {{ editPressReleaseForm.status | json }}</pre>-->
+                    <!--</code>-->
+
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+</div>
