--- a/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-details/admin-press-release-details.component.html
@@ -1,3 +1,70 @@
-<p>
-  admin-press-release-details works!
-</p>
+<!-- * ADMIN-PressRelease-DETAILS (PREVIEW) * -->
+<!-- * Edit Options Sub-Navbar * -->
+<div class="row mb-4">
+    <div class="container">
+        <!-- * Edit Navbar Panel * -->
+        <div class="col-sm-12">
+            <nav class="navbar navbar-expand-lg fixed-top text-light" style="background-color: #1C202B;"
+                 *ngIf="pressRelease">
+                <a class="navbar-brand" href="#">
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png" width="100"
+                         class="d-inline-block align-top" alt="DDW">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <i class="fa fa-dot-circle"></i> {{ pressRelease.title }}
+                        </li>
+                        <li class="nav-item">
+                            <i class="fa fa-user"></i> {{ pressRelease.author }}
+                        </li>
+                    </ul>
+                    <form class="form-inline mx-auto">
+                        <div class="btn-group btn-group-sm float-right"
+                             role="group"
+                             aria-label="Basic example">
+                            <a class="btn btn-primary"
+                               [routerLink]="['/admin/press-releases']">
+                                <i class="fal fa-arrow-circle-left"></i>&nbsp;All Press Releases
+                            </a>
+                            <a class="btn btn-secondary"
+                               [routerLink]="['edit']">
+                                <i class="fa fa-pencil"></i>&nbsp;Edit
+                            </a>
+                            <a class="btn btn-warning"
+                               [routerLink]="['/admin/press-releases']">
+                                <i class="fa fa-undo"></i>&nbsp;Cancel
+                            </a>
+                            <button class="btn btn-danger"
+                                    (click)="onDeletePressRelease()">
+                                <i class="fa fa-trash"></i>&nbsp;Delete
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </nav>
+        </div>
+
+    </div>
+</div>
+
+
+<!-- * If Regular PressRelease * -->
+<div *ngIf="pressRelease" [@simpleFadeAnimation]="'in'">
+    <div class="row">
+        <div class="container">
+            <h3>{{ pressRelease.title}}</h3>
+            <p class="text-light">
+                <small>{{ pressRelease.publishOn | date }}</small>
+            </p>
+
+            <p [innerHTML]="pressRelease.summary" class="details-body"></p>
+
+            <div [innerHTML]="body" class="details-body"></div>
+        </div>
+    </div>
+</div>
