--- a/src/app/components/admin/admin-press-release/admin-press-release-list/admin-press-release-list.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-list/admin-press-release-list.component.html
@@ -1,3 +1,70 @@
-<p>
-  admin-press-release-list works!
-</p>
+<!-- Layout content -->
+<div class="layout-content mb-5" [@simpleFadeAnimation]="'in'">
+    <!-- Content -->
+    <div class="container-fluid flex-grow-1 container-p-y">
+        <div class="card p-3">
+            <h4 class="font-weight-bold py-3 mb-4 pl-2">
+                All Press Releases
+            </h4>
+            <div class="card-datatable table-responsive">
+                <table id="user-list" class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col" style="vertical-align: top;">Title</th>
+                        <th scope="col" style="vertical-align: top;">Author</th>
+                        <th scope="col" style="vertical-align: top;">Summary</th>
+                        <th scope="col" style="vertical-align: top;">Body</th>
+                        <th scope="col" style="vertical-align: top;">Published</th>
+                        <th scope="col" style="vertical-align: top;">Publish <br> Date</th>
+                        <th scope="col" style="vertical-align: top;">Options</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let pressRelease of pressReleaseList | async;">
+                        <td scope="col">
+                            <a [routerLink]="['/admin/press-releases/', pressRelease.url]"
+                               class="text-dark">
+                                {{ pressRelease.title }}
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/users']" class="text-dark">
+                                {{ pressRelease.author }}
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/press-releases/', pressRelease.url]"
+                               class="text-truncate text-dark">
+                                {{ pressRelease.summary | slice:0:15 }}
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/press-releases/', pressRelease.url]"
+                               class="text-truncate text-dark">
+                                {{ pressRelease.body | slice:0:20 }}
+                            </a>
+                        </td>
+                        <td scope="col" style="text-align:center;">
+                            <span class="badge badge-outline-success" *ngIf="pressRelease.published">
+                                Yes
+                            </span>
+                            <span class="badge badge-outline-danger" *ngIf="!pressRelease.published">
+                                No
+                            </span>
+                        </td>
+                        <td scope="col" class="date">{{ pressRelease.publishOn | date:'mediumDate' }}</td>
+                        <td>
+                            <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
+                               [routerLink]="['/admin/press-releases/', pressRelease.url]">
+                                <i class="fa fa-pencil"></i>&nbsp;
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!-- / Content -->
+</div>
+<!-- Layout content -->
