Press Releases now rendering on the front end via the navbar/routing

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -57,7 +57,7 @@
                 </a>
             </li>
             <li class="sidenav-item sub-item">
-                <a [routerLink]="['/admin/news-and-media']" class="sidenav-link">
+                <a [routerLink]="['/admin/news']" class="sidenav-link">
                     <div><i class="fal fa-newspaper"></i>&nbsp;News & Media</div>
                 </a>
             </li>
